update web interfaces
