# backend/openapi.yaml
@@ -89,6 +89,16 @@ components:
         name:
           type: string
       type: object
+    AddLocation:
+      properties:
+        id_parent:
+          example: 1
+          type: integer
+        name:
+          example: "\u0417\u0430\u0449\u0438\u0442\u0430 \u0430\u0433\u0440\u0435\u0433\
+            \u0430\u0442\u0430 \u21161"
+          type: string
+      type: object
     AddProtection:
       properties:
         id_location:
@@ -113,6 +123,8 @@ components:
       type: object
     AddRule:
       properties:
+        compensatory_measures:
+          type: string
         location_id:
           type: integer
         name:
@@ -146,6 +158,7 @@ components:
       properties:
         departament_id:
           example: 1
+          nullable: true
           type: integer
         name:
           example: "\u041E\u0433\u043D\u0435\u0432\u044B\u0435 \u0440\u0430\u0431\u043E\
@@ -177,6 +190,13 @@ components:
         name:
           type: string
       type: object
+    DepartamentList:
+      properties:
+        departaments:
+          items:
+            $ref: '#/components/schemas/Departament'
+          type: array
+      type: object
     FileMasking:
       properties:
         id:
@@ -186,6 +206,8 @@ components:
       type: object
     GenerateMaskingPlan:
       properties:
+        is_test:
+          type: boolean
         location_id:
           type: integer
         questions:
@@ -273,15 +295,33 @@ components:
         id:
           type: integer
       type: object
+    Question1:
+      properties:
+        answers:
+          items:
+            $ref: '#/components/schemas/QuestionAnswer'
+          type: array
+        id:
+          type: integer
+        text:
+          type: string
+      type: object
     QuestionAnswer:
       properties:
         id:
           readOnly: true
           type: integer
-        is_right_answer:
-          type: boolean
         text:
           type: string
+      type: object
+    QuestionList:
+      properties:
+        pagination:
+          $ref: '#/components/schemas/PaginationResponse'
+        questions:
+          items:
+            $ref: '#/components/schemas/Question1'
+          type: array
       type: object
     RelationshipLocationLocation:
       properties:
@@ -360,6 +400,15 @@ components:
           example: ''
           type: string
       type: object
+    TypeWorkList:
+      properties:
+        pagination:
+          $ref: '#/components/schemas/PaginationResponse'
+        type_works:
+          items:
+            $ref: '#/components/schemas/TypeWork'
+          type: array
+      type: object
     UpdateDepartament:
       properties:
         id:
@@ -393,6 +442,8 @@ components:
       type: object
     UpdateRule:
       properties:
+        compensatory_measures:
+          type: string
         id:
           type: integer
         location_id:
@@ -429,10 +480,20 @@ components:
     UpdateTypeWork:
       properties:
         departament_id:
+          nullable: true
           type: integer
         id:
           type: integer
         name:
+          type: string
+      type: object
+    User:
+      properties:
+        id:
+          type: integer
+        role:
+          type: string
+        username:
           type: string
       type: object
   securitySchemes:
@@ -496,9 +557,7 @@ paths:
           content:
             app/json:
               schema:
-                items:
-                  $ref: '#/components/schemas/TypeWork'
-                type: array
+                $ref: '#/components/schemas/TypeWorkList'
           description: "\u0421\u043F\u0438\u0441\u043E\u043A \u0442\u0438\u043F\u043E\
             \u0432 \u0440\u0430\u0431\u043E\u0442"
         '400':
@@ -589,9 +648,7 @@ paths:
           content:
             application/json:
               schema:
-                items:
-                  $ref: '#/components/schemas/Departament'
-                type: array
+                $ref: '#/components/schemas/DepartamentList'
           description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043E\u0442\u0434\u0435\
             \u043B\u043E\u0432"
         '400':
@@ -673,19 +730,6 @@ paths:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u043F\u0438\
         \u0441\u043E\u043A \u0437\u0430\u0449\u0438\u0442"
       parameters:
-      - in: query
-        name: page
-        required: false
-        schema:
-          default: 1
-          example: 1
-          minimum: 0
-          type: integer
-      - in: query
-        name: name
-        required: false
-        schema:
-          type: string
       - explode: true
         in: query
         name: type_protections_ids[]
@@ -696,11 +740,24 @@ paths:
           type: array
         style: form
       - in: query
+        name: name
+        required: false
+        schema:
+          type: string
+      - in: query
         name: limit
         required: false
         schema:
           default: 10
           example: 10
+          type: integer
+      - in: query
+        name: page
+        required: false
+        schema:
+          default: 1
+          example: 1
+          minimum: 0
           type: integer
       responses:
         '200':
@@ -924,7 +981,7 @@ paths:
         content:
           app/json:
             schema:
-              $ref: '#/components/schemas/AddMNObjectSchema'
+              $ref: '#/components/schemas/AddLocation'
       responses:
         '200':
           content:
@@ -988,9 +1045,16 @@ paths:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u043F\u0438\
         \u0441\u043E\u043A \u043B\u043E\u043A\u0430\u0446\u0438\u0439"
       parameters:
+      - in: query
+        name: name
+        required: false
+        schema:
+          example: example
+          nullable: true
+          type: string
       - explode: true
         in: query
-        name: ids_type_mn_object[]
+        name: ids_type_protection[]
         required: false
         schema:
           example:
@@ -1001,7 +1065,7 @@ paths:
         style: form
       - explode: true
         in: query
-        name: ids_type_protection[]
+        name: ids_type_mn_object[]
         required: false
         schema:
           example:
@@ -1018,13 +1082,6 @@ paths:
           example: 1
           minimum: 0
           type: integer
-      - in: query
-        name: name
-        required: false
-        schema:
-          example: example
-          nullable: true
-          type: string
       - in: query
         name: limit
         required: false
@@ -1238,6 +1295,26 @@ paths:
         \u043E\u0436\u0435\u043D\u0438\u044F"
       tags:
       - auth
+  /api/auth/current-user/:
+    get:
+      description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u043F\u0440\u043E\
+        \u0444\u0438\u043B\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\
+        \u0435\u043B\u044F"
+      responses:
+        '200':
+          content:
+            app/json:
+              schema:
+                $ref: '#/components/schemas/User'
+          description: "\u041F\u0440\u043E\u0444\u0438\u043B\u044C \u043F\u043E\u043B\
+            \u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F"
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+      summary: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u043F\u0440\u043E\
+        \u0444\u0438\u043B\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\
+        \u0435\u043B\u044F"
+      tags:
+      - auth
   /api/auth/test/: {}
   /api/files/get-pdf/:
     get:
@@ -1298,19 +1375,19 @@ paths:
         \u0438\u044F"
       parameters:
       - in: query
+        name: limit
+        required: false
+        schema:
+          default: 10
+          example: 10
+          type: integer
+      - in: query
         name: page
         required: false
         schema:
           default: 1
           example: 1
           minimum: 0
-          type: integer
-      - in: query
-        name: limit
-        required: false
-        schema:
-          default: 10
-          example: 10
           type: integer
       responses:
         '200':
@@ -1454,14 +1531,6 @@ paths:
         \u0441\u043E\u043A \u043F\u0440\u0430\u0432\u0438\u043B"
       parameters:
       - in: query
-        name: page
-        required: false
-        schema:
-          default: 1
-          example: 1
-          minimum: 0
-          type: integer
-      - in: query
         name: name
         required: false
         schema:
@@ -1482,6 +1551,14 @@ paths:
           default: 10
           example: 10
           type: integer
+      - in: query
+        name: page
+        required: false
+        schema:
+          default: 1
+          example: 1
+          minimum: 0
+          type: integer
       responses:
         '200':
           content:
@@ -1501,6 +1578,93 @@ paths:
             \u0440\u043E\u0441\u0430"
       summary: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u043F\u0438\
         \u0441\u043E\u043A \u043F\u0440\u0430\u0432\u0438\u043B"
+      tags:
+      - rule
+  /api/rule/questions/:
+    get:
+      description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u043F\u0438\
+        \u0441\u043E\u043A \u0432\u043E\u043F\u0440\u043E\u0441\u043E\u0432 \u0434\
+        \u043B\u044F \u0443\u0442\u043E\u0447\u043D\u0435\u043D\u0438\u044F \u043C\
+        \u0430\u0441\u043A\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u044F \u0437\u0430\
+        \u0449\u0438\u0442"
+      parameters:
+      - in: query
+        name: limit
+        required: false
+        schema:
+          default: 10
+          example: 10
+          type: integer
+      - in: query
+        name: text
+        required: false
+        schema:
+          type: string
+      - in: query
+        name: page
+        required: false
+        schema:
+          default: 1
+          example: 1
+          minimum: 0
+          type: integer
+      - explode: true
+        in: query
+        name: question_ids[]
+        required: false
+        schema:
+          items:
+            type: integer
+          type: array
+        style: form
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/QuestionList'
+          description: null
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BinaryResponse'
+          description: "\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0432\
+            \u044B\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0438 \u0437\u0430\u043F\
+            \u0440\u043E\u0441\u0430"
+      summary: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u043F\u0438\
+        \u0441\u043E\u043A \u0432\u043E\u043F\u0440\u043E\u0441\u043E\u0432 \u0434\
+        \u043B\u044F \u0443\u0442\u043E\u0447\u043D\u0435\u043D\u0438\u044F \u043C\
+        \u0430\u0441\u043A\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u044F \u0437\u0430\
+        \u0449\u0438\u0442"
+      tags:
+      - rule
+  /api/rule/question/:
+    get:
+      description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0432\u043E\u043F\
+        \u0440\u043E\u0441 \u0434\u043B\u044F \u0443\u0442\u043E\u0447\u043D\u0435\
+        \u043D\u0438\u044F \u043C\u0430\u0441\u043A\u0438\u0440\u043E\u0432\u0430\u043D\
+        \u0438\u044F \u0437\u0430\u0449\u0438\u0442"
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Question1'
+          description: null
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BinaryResponse'
+          description: "\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0432\
+            \u044B\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0438 \u0437\u0430\u043F\
+            \u0440\u043E\u0441\u0430"
+      summary: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0432\u043E\u043F\
+        \u0440\u043E\u0441 \u0434\u043B\u044F \u0443\u0442\u043E\u0447\u043D\u0435\
+        \u043D\u0438\u044F \u043C\u0430\u0441\u043A\u0438\u0440\u043E\u0432\u0430\u043D\
+        \u0438\u044F \u0437\u0430\u0449\u0438\u0442"
       tags:
       - rule
 servers:
